# cichlid

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
benches/: bench.rs
src/: color_codes.rs  gradient.rs  hsv.rs  lerp.rs  lib.rs  power_mgmt.rs  rgb.rs  scale.rs  trig.rs
src/color_util/: blur.rs  color_impls.rs  gradient.rs  mod.rs  rainbow.rs
src/math/: ext.rs  lerp.rs  mod.rs  scale.rs  trig.rs
