[package]
name = "cichlid"
version = "0.1.1"
authors = ["Stephen Fleischman <stephenf@cs.washington.edu>"]
description = "A color math library for programming addressable LEDs."
documentation = "https://docs.rs/cichlid/"
license = "MIT"
homepage =  "https://github.com/sfleischman105/cichlid"
repository = "https://github.com/sfleischman105/cichlid"
edition = "2018"

[lib]
name = "cichlid"
path = "src/lib.rs"
test = true
doctest = true
crate-type = ["rlib"]

#[dev-dependencies]
#criterion = "0.2.11"

[features]
no-std = []
default = []
low-mem = []

[profile.dev]
opt-level = 1
debug = true
codegen-units = 1
debug-assertions = false

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[[bench]]
name = "bench"
harness = false